--- a/elm-bridge.cabal
+++ b/elm-bridge.cabal
@@ -32,8 +32,9 @@ library
                        Elm.TyRep
                        Elm.Versions
   other-modules:       Elm.Utils
-  build-depends:       base >= 4.15 && < 5,
+  build-depends:       base >= 4.14 && < 5,
                        template-haskell,
+                       template-haskell-compat-v0208 >=0.1 && <0.2,
                        aeson  >= 1
   default-language:    Haskell2010
 
